k8s/uat/service.yml
apiVersion: v1
kind: Service
metadata:
  name: commodity-api
  namespace: uat
spec:
  type: ClusterIP
  selector:
    app: commodity-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
