k8s/uat/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commodity-api
  namespace: uat
spec:
  ingressClassName: nginx
  rules:
    - host: commodity-api.uat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: commodity-api
                port:
                  number: 80
